This file lists changes on this extension.
Localisation updates are done on betawiki and aren't listed here.

0.10.15 - 5 December 2008
  Fixed PHP notices on Special:ViewConfig.

0.10.14 - 4 December 2008
  * Added support for $wgRateLimits
  * Don't show [+] for sections in TOC with only one subsection

0.10.13 - 3 December 2008
  * JavaScript-based setting search in Special:Configure, Special:Extensions
    and Special:ViewConfig
  * Hidden settings now have a summary
  * Added a search box at the top Special:ViewConfig to display versions for a
    specific wiki

0.10.12 - 2 December 2008
  * Fix a problem of duplicate files with the same timestamp if two users save
    a new version at the same time
  * Fixed some queries to be more efficient

0.10.11 - 1 December 2008
  * New reason field in Special:Configure and Special:Extension to allow users
    to put a comment for each version
  * File handler now uses PHP files instead of serialized files.
  NOTE FOR PEOPLE USING FILES HANDLER: OLD SERIALIZED  FILES WON'T WORK ANYMORE
  IN THIS VERSION, PLEASE RUN THE migrateFiles.php SCRIPT.

0.10.10 - 30 November 2008
  * Editable settings are now restricted by default to some settings, if you
    want to have all of them, set $wgConfigureEditableSettings = array(); in
    LocalSettings.php
  * Inline preview of logo
  * Removed $wgValidSkinNames

0.10.9 - 27 November 2008
  Added $wgConfigureExtensionsVar and $wgConfigureOnlyUseVarForExt to allow
  enabling extensions by setting a variable rather than directly include the
  file. 

0.10.8 - 26 November 2008
  * Stopped displaying settings which can't be edited in Special:Configure.
    These can be viewed at Special:ViewConfig.
  * Introduced explicit whitelisting of settings, rather than blacklisting
    of other settings.
  * Some usability cleanup.
  * Fixed javascript bug with 'Delete this entry' buttons in previous version.
  * Fixed type of $wgRightsUrl

0.10.7 - 25 November 2008